<resources>
    <string name="app_name">WoIM</string>
    <!--login-->
    <string name="login_input_name">请输入用户名</string>
    <string name="login_input_password">请输入密码</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">下次自动登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="haveUser">我有账号登录了</string>

    <string name="login_null_name">用户名不能为空</string>
    <string name="login_null_pass">密码不能为空</string>
    <string name="logining">登陆中......</string>
    <string name="login_success">登录成功</string>
    <string name="login_failure">用户名或密码错误</string>
    <string name="login_offline">服务器连接失败</string>

    <!--register-->
    <string name="text_name">用户名*</string>
    <string name="register_name">名字：长度为3-16的字母+数字</string>
    <string name="pattern_register_name">^[a-zA-Z0-9]{3,16}$</string>
    <string name="error_register_name">注册用户名非法</string>
    <string name="text_password">密码*</string>
    <string name="register_password">密码：长度为6-18的字母+数字</string>
    <string name="pattern_register_password">^[a-zA-Z0-9]{6,18}$</string>
    <string name="error_register_password">密码不符合规范</string>
    <string name="text_passwordAgain">密码确认*</string>
    <string name="register_passwordAgain">密码确认：输入相同的密码</string>
    <string name="error_register_password_again">请输入相同的密码</string>
    <string name="error_register_input">输入不能为空</string>
    <string name="registering">注册中......</string>
    <string name="register_failure">该用户已存在</string>
    <string name="register_offline">服务器连接失败</string>
    <string name="register_success">注册成功，现在可以去登录啦！</string>

    <!--mianActivity-->
    <!--main_nav_menu-->
    <string name="nav_personal_data">个人资料</string>
    <string name="nav_setting">设置</string>
    <string name="nav_about">关于WoChat</string>
    <string name="nav_help">帮助</string>
    <string name="nav_exit">退出</string>
    <!--main_toolbar_menu-->
    <string name="toolbar_title">WoChat</string>
    <string name="toolbar_add_user">添加好友</string>
    <string name="toolbar_create_group">发起群聊</string>
    <!--message_fragment-->
    <string name="fragment_message">这是消息界面</string>
    <string name="fragment_message_tab">消息</string>

    <!--message_friends-->
    <string name="fragment_friends">这是联系人界面</string>
    <string name="fragment_friends_tab">好友</string>
    <!--tab-->


</resources>
