<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <!--组内的所有菜单项只能单选-->
        <item
            android:id="@+id/personal_data"
            android:icon="@drawable/ic_set_per_data"
            android:title="@string/nav_personal_data"/>
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_nav_setting"
            android:title="@string/nav_setting"/>
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/nav_about"/>
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_nav_help"
            android:title="@string/nav_help"/>
        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_nav_exit"
            android:title="@string/nav_exit"/>
    </group>
</menu>