<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/register_toolbar"
        layout="@layout/toolbar"/>

    <!--设置用户头像-->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/register_user_head"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/register_toolbar"
        android:src="@drawable/login_user_head" />

    <LinearLayout
        android:id="@+id/register_user_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_user_head"
        android:orientation="vertical">

        <com.example.wochat.ui.ClearEditText
            android:id="@+id/register_user_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/edit_text_color"
            android:hint="@string/register_name"
            android:padding="10dp" />

        <!--分割线-->
        <include layout="@layout/separation_line"/>

        <com.example.wochat.ui.ClearEditText
            android:id="@+id/register_user_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/edit_text_color"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:padding="10dp"/>

        <include layout="@layout/separation_line"/>

        <com.example.wochat.ui.ClearEditText
            android:id="@+id/register_user_password_again"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/edit_text_color"
            android:hint="@string/register_passwordAgain"
            android:inputType="textPassword"
            android:padding="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_user_edit"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="@color/button_text_color"
        android:background="@drawable/button_bg"/>

    <TextView
        android:id="@+id/goto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_button"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textColor="@color/main_color"
        android:layout_centerInParent="true"/>

</RelativeLayout>
